--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
 	}
 	buildToolsVersion = '29.0.0'
 	buildTypes {
+		debug {
+			versionNameSuffix '-DEBUG'
+		}
+
 		release {
 			minifyEnabled true
 			shrinkResources true
@@ -38,7 +42,7 @@ dependencies {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
 	testImplementation 'junit:junit:4.13-beta-3'
-	//design
+	//UI
 	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
 	implementation 'com.google.android.material:material:1.1.0-alpha08'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
@@ -46,6 +50,7 @@ dependencies {
 	implementation 'androidx.cardview:cardview:1.0.0'
 	implementation "com.yuyakaido.android:card-stack-view:2.3.4"
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
+	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 	//firebase
 	implementation 'com.google.firebase:firebase-auth:18.1.0'
 	implementation 'com.google.firebase:firebase-core:17.0.1'
