--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 		</activity>
 
 		<activity
-			android:name=".ui.activities.MainActivity"
+			android:name=".ui.main.MainActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
@@ -55,7 +55,7 @@
 		</activity>
 
 		<activity
-			android:name=".ui.activities.AuthActivity"
+			android:name=".ui.auth.AuthActivity"
 			android:configChanges="orientation|keyboard|keyboardHidden"
 			android:theme="@style/AppTheme"
 			android:windowSoftInputMode="stateHidden">
@@ -68,11 +68,10 @@
 			android:windowSoftInputMode="stateHidden">
 		</activity>
 
-		<activity android:name=".ui.activities.FullScreenImageActivity"/>
-
 		<activity
-			android:name=".ui.activities.ChatActivity"
-			android:windowSoftInputMode="adjustResize"/>
+			android:name=".ui.chat.FullScreenImageActivity"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
 
 		<provider
 			android:name="androidx.core.content.FileProvider"
@@ -85,8 +84,8 @@
 				android:resource="@xml/provider_paths"/>
 		</provider>
 
-		<service android:name=".utils.LocationService"/>
-		<service android:name=".utils.GPSTracker"/>
+		<service android:name=".services.LocationService"/>
+		<service android:name=".services.GPSTracker"/>
 	</application>
 
 </manifest>
