--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ android {
 		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
-		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 	}
 	buildToolsVersion = '29.0.0'
 	buildTypes {
@@ -38,25 +37,21 @@ android {
 dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-	androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0-alpha01', {
-		exclude group: 'com.android.support', module: 'support-annotations'
-	})
-	testImplementation 'junit:junit:4.13-beta-3'
 	//UI
 	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
 	implementation 'com.google.android.material:material:1.1.0-alpha08'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
 	implementation 'androidx.cardview:cardview:1.0.0'
-	implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 	//firebase
 	implementation 'com.google.firebase:firebase-auth:18.1.0'
 	implementation 'com.google.firebase:firebase-core:17.0.1'
 	implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
-	implementation 'com.google.firebase:firebase-storage:18.1.0'
-	implementation 'com.google.firebase:firebase-firestore:20.1.0'
+	implementation 'com.google.firebase:firebase-storage:18.1.1'
+	implementation 'com.google.firebase:firebase-firestore:20.2.0'
 	//chat
 	implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
 	implementation 'com.google.android.libraries.places:places:2.0.0'
@@ -75,5 +70,6 @@ dependencies {
 
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
+	implementation project(path: ':progressbutton')
 
 }
