--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -9,7 +11,6 @@ android {
 		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
-		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 	}
 	buildToolsVersion = '29.0.0'
 	buildTypes {
@@ -33,36 +34,40 @@ android {
 		enabled true
 	}
 
+	sourceSets {
+		main.java.srcDirs += 'src/main/kotlin'
+	}
+
 }
 
 dependencies {
+
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
+	implementation 'androidx.core:core-ktx:1.0.2'
+	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-	androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0-alpha01', {
-		exclude group: 'com.android.support', module: 'support-annotations'
-	})
-	testImplementation 'junit:junit:4.13-beta-3'
 	//UI
 	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-	implementation 'com.google.android.material:material:1.1.0-alpha08'
+	implementation 'com.google.android.material:material:1.1.0-alpha09'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta02'
 	implementation 'androidx.cardview:cardview:1.0.0'
-	implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 	//firebase
 	implementation 'com.google.firebase:firebase-auth:18.1.0'
 	implementation 'com.google.firebase:firebase-core:17.0.1'
 	implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
-	implementation 'com.google.firebase:firebase-storage:18.1.0'
-	implementation 'com.google.firebase:firebase-firestore:20.1.0'
+	implementation 'com.google.firebase:firebase-storage:18.1.1'
+	implementation 'com.google.firebase:firebase-firestore:20.2.0'
 	//chat
 	implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
 	implementation 'com.google.android.libraries.places:places:2.0.0'
 	//facebook auth
-	implementation 'com.facebook.android:facebook-android-sdk:5.1.1'
-	implementation 'com.facebook.android:facebook-login:5.1.1'
+	implementation 'com.facebook.android:facebook-android-sdk:5.2.0'
+	implementation 'com.facebook.android:facebook-login:5.2.0'
 	//binding
 	implementation 'com.jakewharton:butterknife:10.1.0'
 	annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
@@ -70,10 +75,11 @@ dependencies {
 	implementation 'android.arch.lifecycle:extensions:1.1.1'
 	implementation 'com.github.bumptech.glide:glide:4.9.0'
 	annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-	implementation 'com.google.dagger:dagger:2.23.2'
-	annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
-
+	implementation 'com.google.dagger:dagger:2.24'
+	annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
+	implementation project(path: ':progressbutton')
+
 
 }
