--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.github.ben-manes.versions'
 
 buildscript {
+	ext.kotlin_version = '1.3.41'
 	repositories {
 		mavenCentral()
 		jcenter()
@@ -8,9 +9,10 @@ buildscript {
 	}
 	dependencies {
 		classpath 'com.android.tools.build:gradle:3.4.2'
-		classpath 'com.google.gms:google-services:4.3.0'
+		classpath 'com.google.gms:google-services:4.2.0'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.21.0'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
@@ -20,7 +22,6 @@ buildscript {
 allprojects {
 	repositories {
 		maven { url "https://jitpack.io" }
-		maven { url "https://maven.google.com" }
 		mavenCentral()
 		jcenter()
 		google()
