--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,16 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-	compileSdkVersion 28
+	compileSdkVersion 29
 	defaultConfig {
 		applicationId "com.mmdev.meetapp"
 		minSdkVersion 21
-		targetSdkVersion 28
+		targetSdkVersion 29
 		versionCode 1
 		versionName "1.0"
 	}
 
-	buildToolsVersion = '29.0.0'
+	buildToolsVersion = '29.0.2'
 	buildTypes {
 		debug {
 			versionNameSuffix '-DEBUG'
@@ -53,20 +53,17 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
 	implementation 'com.google.android.material:material:1.1.0-alpha09'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta02'
+	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
 	implementation 'androidx.cardview:cardview:1.0.0'
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 	//firebase
-	implementation 'com.google.firebase:firebase-auth:18.1.0'
-	implementation 'com.google.firebase:firebase-core:17.0.1'
+	implementation 'com.google.firebase:firebase-auth:19.0.0'
+	implementation 'com.google.firebase:firebase-core:17.1.0'
 	implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
-	implementation 'com.google.firebase:firebase-storage:18.1.1'
-	implementation 'com.google.firebase:firebase-firestore:20.2.0'
-	//chat
-	implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
-	implementation 'com.google.android.libraries.places:places:2.0.0'
+	implementation 'com.google.firebase:firebase-storage:19.0.0'
+	implementation 'com.google.firebase:firebase-firestore:21.0.0'
 	//facebook auth
 	implementation 'com.facebook.android:facebook-android-sdk:5.4.0'
 	implementation 'com.facebook.android:facebook-login:5.4.0'
@@ -74,7 +71,7 @@ dependencies {
 	implementation 'android.arch.lifecycle:extensions:1.1.1'
 	implementation 'com.github.bumptech.glide:glide:4.9.0'
 	kapt 'com.github.bumptech.glide:compiler:4.9.0'
-	implementation 'com.google.dagger:dagger:2.24'
+	implementation "com.google.dagger:dagger:$dagger_version"
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
