--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 		google()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:3.4.2'
+		classpath 'com.android.tools.build:gradle:3.5.0'
 		classpath 'com.google.gms:google-services:4.2.0'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.21.0'
@@ -30,4 +30,15 @@ allprojects {
 
 task clean(type: Delete) {
 	delete rootProject.buildDir
+}
+
+ext{
+	// RxJava
+	rxjava_version = '2.2.2'
+
+	// RxAndroid
+	rxandroid_version = '2.1.0'
+
+	// Dagger
+	dagger_version = '2.24'
 }
