--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,9 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+
 	compileSdkVersion 29
+
 	defaultConfig {
 		applicationId "com.mmdev.meetapp"
 		minSdkVersion 21
@@ -47,7 +49,7 @@ dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'androidx.core:core-ktx:1.0.2'
 	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	//UI
 	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
@@ -60,10 +62,10 @@ dependencies {
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 	//firebase
 	implementation 'com.google.firebase:firebase-auth:19.0.0'
-	implementation 'com.google.firebase:firebase-core:17.1.0'
+	implementation "com.google.firebase:firebase-core:$firebase_core_version"
 	implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
-	implementation 'com.google.firebase:firebase-storage:19.0.0'
-	implementation 'com.google.firebase:firebase-firestore:21.0.0'
+	implementation "com.google.firebase:firebase-storage:$firebase_storage_version"
+	implementation "com.google.firebase:firebase-firestore:$firebase_firestore_version"
 	//facebook auth
 	implementation 'com.facebook.android:facebook-android-sdk:5.4.0'
 	implementation 'com.facebook.android:facebook-login:5.4.0'
@@ -75,7 +77,10 @@ dependencies {
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
-	implementation project(path: ':progressbutton')
+
+	implementation project(':progressbutton')
+	implementation project(':domain')
+	implementation project(':data')
 
 
 }
