--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
 		</activity>
 
 		<activity
-			android:name=".ui.chat.FullScreenImageActivity"
+			android:name=".ui.chat.view.FullScreenImageActivity"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 
