--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,40 +47,56 @@ android {
 dependencies {
 
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
-	implementation 'androidx.core:core-ktx:1.0.2'
-	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+	implementation project(':progressbutton')
+	implementation project(':domain')
+	implementation project(':data')
+
+	//core
+	implementation 'androidx.core:core-ktx:1.2.0-alpha03'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-	//UI
 	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+
+	//UI
 	implementation 'com.google.android.material:material:1.1.0-alpha09'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
 	implementation 'androidx.cardview:cardview:1.0.0'
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
 	//firebase
 	implementation 'com.google.firebase:firebase-auth:19.0.0'
 	implementation "com.google.firebase:firebase-core:$firebase_core_version"
 	implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
 	implementation "com.google.firebase:firebase-storage:$firebase_storage_version"
 	implementation "com.google.firebase:firebase-firestore:$firebase_firestore_version"
+
 	//facebook auth
 	implementation 'com.facebook.android:facebook-android-sdk:5.4.0'
 	implementation 'com.facebook.android:facebook-login:5.4.0'
-	//additional
-	implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+	//glide
 	implementation 'com.github.bumptech.glide:glide:4.9.0'
 	kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
+	// Dagger
 	implementation "com.google.dagger:dagger:$dagger_version"
-	annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
+	kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+	// RxJava
+	implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+
+	// RxAndroid
+	implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+
+	// ViewModel and LiveData
+	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+	implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
 
-	implementation project(':progressbutton')
-	implementation project(':domain')
-	implementation project(':data')
+
 
 
 }
