--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,14 @@ buildscript {
 
     ext.kotlin_version = '1.3.50'
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.google.gms:google-services:4.3.1'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.22.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    
     repositories {
         mavenCentral()
         jcenter()
@@ -11,16 +19,7 @@ buildscript {
     }
 
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.21.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
 }
 
 allprojects {
@@ -37,18 +36,23 @@ task clean(type: Delete) {
 }
 
 ext{
-    // RxJava
-    rxjava_version = '2.2.11'
-
-    // RxAndroid
-    rxandroid_version = '2.1.0'
-
-    // Dagger
-    dagger_version = '2.24'
 
     //firebase
     firebase_core_version = '17.1.0'
     firebase_firestore_version = '21.0.0'
     firebase_storage_version = '19.0.0'
+
+    // Dagger
+    dagger_version = '2.24'
+
+    // RxJava
+    rxjava_version = '2.2.11'
+
+    // RxAndroid
+    rxandroid_version = '2.1.1'
+
+    // ViewModel and LiveData
+    lifecycle_version = '2.2.0-alpha03'
+
 
 }
