--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 	//firebase
-	implementation 'com.google.firebase:firebase-auth:19.0.0'
+	implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
 	implementation "com.google.firebase:firebase-core:$firebase_core_version"
 	implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
 	implementation "com.google.firebase:firebase-storage:$firebase_storage_version"
