--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
 
 	<application
+		android:name=".core.App"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
@@ -56,7 +57,7 @@
 		</activity>
 
 		<activity
-			android:name=".ui.auth.AuthActivity"
+			android:name=".ui.auth.view.AuthActivity"
 			android:configChanges="orientation|keyboard|keyboardHidden"
 			android:theme="@style/AppTheme"
 			android:windowSoftInputMode="stateHidden">
