--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':expandablelayout', ':progressbutton', ':domain', ':data'
+include ':app', ':expandablelayout', ':progressbutton', ':business', ':data'
