--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,12 +33,12 @@ android {
 }
 
 dependencies {
-    implementation project(':domain')
+    implementation project(':business')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Kotlin
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     // Firebase
