--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,16 @@ dependencies {
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.appcompat:appcompat:1.1.0'
 
-	//UI
+	//custom UI
 	implementation 'com.google.android.material:material:1.1.0-alpha10'
 	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
 	implementation 'androidx.cardview:cardview:1.0.0'
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+	//navigation drawer
+	implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
+	implementation 'com.nineoldandroids:library:2.4.0'
 
 	//firebase
 	implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
