fixed auth activity for different screens (dimension file instead of multiple activities)

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
 #Thu Oct 03 14:01:31 EEST 2019
 kotlin.code.style=official
 android.enableJetifier=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
+org.gradle.parallel=true
