--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,12 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.appcompat:appcompat:1.1.0'
-
-	//custom UI
-	implementation 'com.google.android.material:material:1.1.0-alpha10'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+	implementation 'com.google.android.material:material:1.1.0-beta01'
 	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
 	implementation 'androidx.cardview:cardview:1.0.0'
+
+	//custom UI
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'com.github.ceryle:SegmentedButton:2.0.2'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
@@ -96,7 +97,6 @@ dependencies {
 	implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
-
 
 
 
