--- a/business/build.gradle
+++ b/business/build.gradle
@@ -1,14 +1,27 @@
 apply plugin: 'kotlin'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     // Kotlin
-    implementation"org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // RxJava
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
-}
+    implementation libs.rxJava
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+    // JUnit
+    testImplementation libs.junit
+
+    // Mockito Kotlin
+    testImplementation libs.mockitoKotlin
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+//sourceCompatibility = "1.8"
+////targetCompatibility = "1.8"
