--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,18 +68,22 @@
 			android:name=".ui.chat.view.FullScreenImageActivity"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
+
+
 		<activity android:name=".ui.feed.tabitem.FeedItemActivity" />
 
 		<provider
 			android:name="androidx.core.content.FileProvider"
 			android:authorities="${applicationId}.provider"
 			android:exported="false"
-			android:grantUriPermissions="true"
-			>
+			android:grantUriPermissions="true">
+
 			<meta-data
 				android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/provider_paths"/>
+
 		</provider>
+
 
 		<service android:name="com.mmdev.data.services.LocationService"/>
 		<service android:name="com.mmdev.data.services.GPSTracker"/>
