fully redesigned app name + logo + colors + all screens

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
 
 	defaultConfig {
-		applicationId "com.mmdev.meetapp"
+		applicationId "com.mmdev.roove"
 		minSdkVersion globalConfiguration["androidMinSdkVersion"]
 		targetSdkVersion globalConfiguration["androidTargetSdkVersion"]
 		versionCode globalConfiguration["androidVersionCode"]
@@ -61,7 +61,7 @@ dependencies {
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.appcompat:appcompat:1.1.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-	implementation 'com.google.android.material:material:1.1.0-beta01'
+	implementation 'com.google.android.material:material:1.2.0-alpha01'
 	implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
 	implementation 'androidx.cardview:cardview:1.0.0'
 
