--- a/build.gradle
+++ b/build.gradle
@@ -5,39 +5,36 @@ buildscript {
 	ext {
 
 		kotlin_version = '1.3.50'
+
+		// facebook
+		facebook_sdk_version = '5.8.0'
+
 		//firebase
 		firebase_auth_version = '19.1.0'
-		firebase_core_version = '17.2.0'
-		firebase_firestore_version = '21.2.0'
+		firebase_core_version = '17.2.1'
+		firebase_firestore_version = '21.2.1'
 		firebase_storage_version = '19.1.0'
 
 		// Dagger
-		dagger_version = '2.24'
+		dagger_version = '2.25.2'
 
 		// RxJava
-		rxjava_version = '2.2.12'
+		rxjava_version = '2.2.13'
 
 		// RxAndroid
 		rxandroid_version = '2.1.1'
 
 		// ViewModel and LiveData
-		lifecycle_version = '2.2.0-beta01'
-
+		lifecycle_version = '2.2.0-rc01'
 
 		//tests
 		junitVersion = "4.12"
-		mockitoKotlinVersion = "1.5.0"
-
-		hamcrestVersion = "2.0.0.0"
 
 		libs = [
-				rxJava          : ('io.reactivex.rxjava2:rxjava:' + rxjava_version),
-				rxAndroid       : ('io.reactivex.rxjava2:rxandroid:' + rxandroid_version),
-				junit           : ('junit:junit:' + junitVersion),
-				mockitoKotlin   : ('com.nhaarman:mockito-kotlin-kt1.1:' + mockitoKotlinVersion),
-				hamcrest        : ('org.hamcrest:java-hamcrest:' + hamcrestVersion)
+			rxJava          : ('io.reactivex.rxjava2:rxjava:' + rxjava_version),
+			rxAndroid       : ('io.reactivex.rxjava2:rxandroid:' + rxandroid_version),
+			junit           : ('junit:junit:' + junitVersion),
 		]
-
 
 	}
 
@@ -56,8 +53,6 @@ buildscript {
 		google()
 	}
 
-
-
 }
 
 allprojects {
@@ -68,7 +63,7 @@ allprojects {
 		androidVersionName = "1.0"
 		androidMinSdkVersion = 21
 		androidTargetSdkVersion = 29
-		testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner"
+		testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 	}
 
 
