--- a/business/build.gradle
+++ b/business/build.gradle
@@ -2,26 +2,17 @@ apply plugin: 'kotlin'
 
 dependencies {
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // RxJava
     implementation libs.rxJava
 
-    // JUnit
-    testImplementation libs.junit
-
-    // Mockito Kotlin
-    testImplementation libs.mockitoKotlin
 }
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
 }
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
+
 //sourceCompatibility = "1.8"
 ////targetCompatibility = "1.8"
