--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
 org.gradle.parallel=true
+android.databinding.incremental=true
+kapt.use.worker.api=true
