100% kotlin, todo: replace sharedpref to binaryprefs

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 #Thu Oct 03 14:01:31 EEST 2019
-kotlin.code.style=official
-android.enableJetifier=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-android.useAndroidX=true
-org.gradle.parallel=true
+
 android.databinding.incremental=true
+android.enableJetifier=true
+android.useAndroidX=true
 kapt.use.worker.api=true
+kotlin.code.style=official
+
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.parallel=true
+org.gradle.warning.mode=all
