--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.mmdev.roove">
+	package="com.mmdev.roove">
 
-
-	<uses-permission android:name="android.permission.CAMERA"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 	<application
 		android:name=".core.App"
 		android:allowBackup="true"
+		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme.NoActionBar"
-		android:fullBackupContent="@xml/backup_descriptor">
+		android:theme="@style/AppTheme.NoActionBar">
 
-		<meta-data android:name="com.facebook.sdk.ApplicationId"
-				   android:value="@string/facebook_app_id"/>
-		<meta-data android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled"
-				   android:value="false"/>
-		<meta-data android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
-				   android:value="false"/>
+		<activity
+			android:name=".ui.SplashActivity"
+			android:screenOrientation="portrait">
+
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+
+		<activity
+			android:name=".ui.main.view.MainActivity"
+			android:label="@string/app_name"
+			android:screenOrientation="portrait"/>
+
+		<activity
+			android:name=".ui.auth.view.AuthActivity"
+			android:configChanges="orientation|keyboard|keyboardHidden"
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="stateHidden" />
+
+
+		<activity
+			android:name=".ui.chat.view.FullScreenImageActivity"
+			android:screenOrientation="portrait" >
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+			</intent-filter>
+		</activity>
+
+		<activity android:name=".ui.feed.tabitem.FeedItemActivity" />
+
+		<meta-data
+			android:name="com.facebook.sdk.ApplicationId"
+			android:value="@string/facebook_app_id" />
+		<meta-data
+			android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled"
+			android:value="false" />
+		<meta-data
+			android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
+			android:value="false" />
 		<meta-data
 			android:name="preloaded_fonts"
 			android:resource="@array/preloaded_fonts" />
@@ -32,59 +65,30 @@
 		<activity
 			android:name="com.facebook.FacebookActivity"
 			android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-			android:label="@string/app_name"/>
+			android:label="@string/app_name" />
 
 		<activity
 			android:name="com.facebook.CustomTabActivity"
 			android:exported="true">
 			<intent-filter>
-				<action android:name="android.intent.action.VIEW"/>
-				<category android:name="android.intent.category.DEFAULT"/>
-				<category android:name="android.intent.category.BROWSABLE"/>
-				<data android:scheme="@string/fb_login_protocol_scheme"/>
+				<action android:name="android.intent.action.VIEW" />
+
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+
+				<data android:scheme="@string/fb_login_protocol_scheme" />
 			</intent-filter>
 		</activity>
-
-		<activity
-			android:name="com.mmdev.roove.ui.main.view.MainActivity"
-			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<action android:name="android.intent.action.VIEW"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-
-		</activity>
-
-		<activity
-			android:name="com.mmdev.roove.ui.auth.view.AuthActivity"
-			android:configChanges="orientation|keyboard|keyboardHidden"
-			android:theme="@style/AppTheme.NoActionBar"
-			android:windowSoftInputMode="stateHidden">
-		</activity>
-
-		<activity
-			android:name="com.mmdev.roove.ui.chat.view.FullScreenImageActivity"
-			android:theme="@style/AppTheme.NoActionBar">
-		</activity>
-
-		<activity android:name="com.mmdev.roove.ui.feed.tabitem.FeedItemActivity" />
 
 		<provider
 			android:name="androidx.core.content.FileProvider"
 			android:authorities="${applicationId}.provider"
 			android:exported="false"
 			android:grantUriPermissions="true">
-
 			<meta-data
 				android:name="android.support.FILE_PROVIDER_PATHS"
-				android:resource="@xml/provider_paths"/>
-
+				android:resource="@xml/provider_paths" />
 		</provider>
-
-		<service android:name="com.mmdev.data.services.LocationService"/>
-		<service android:name="com.mmdev.data.services.GPSTracker"/>
 
 	</application>
 
