--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ kotlin.code.style=official
 
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 org.gradle.parallel=true
-org.gradle.warning.mode=all
+#org.gradle.warning.mode=all
