--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,3 +1,13 @@
+/*
+ * Created by Andrii Kovalchuk on 20.11.19 21:38
+ * Copyright (c) 2019. All rights reserved.
+ * Last modified 20.11.19 19:12
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -60,6 +70,11 @@ dependencies {
 
 	// RxJava
 	implementation libs.rxJava
+
+	// retrofit
+	implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+	implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+	implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
 
 	// Dagger
 	implementation "com.google.dagger:dagger:$dagger_version"
