--- a/business/build.gradle
+++ b/business/build.gradle
@@ -1,18 +1,28 @@
 apply plugin: 'kotlin'
 
 dependencies {
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+	// Kotlin
+	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    // RxJava
-    implementation libs.rxJava
+	// RxJava
+	implementation libs.rxJava
 
 }
 compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
 }
+
+/*
+ * Created by Andrii Kovalchuk on 23.11.19 19:40
+ * Copyright (c) 2019. All rights reserved.
+ * Last modified 23.11.19 17:11
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
 
 //sourceCompatibility = "1.8"
 ////targetCompatibility = "1.8"
