--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 17.08.19 16:09
-  ~ Copyright (c) 2019 . All rights reserved.
-  ~ Last modified 19.11.19 16:07
+  ~ Created by Andrii Kovalchuk on 28.11.19 22:07
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 28.11.19 21:47
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
-  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.mmdev.roove">
@@ -40,7 +41,8 @@
 		<activity
 			android:name=".ui.main.view.MainActivity"
 			android:label="@string/app_name"
-			android:screenOrientation="portrait"/>
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="adjustPan"/>
 
 		<activity
 			android:name=".ui.auth.view.AuthActivity"
