--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 28.11.19 22:07
+  ~ Created by Andrii Kovalchuk on 29.11.19 21:45
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 28.11.19 21:47
+  ~ Last modified 29.11.19 17:41
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -50,7 +50,7 @@
 			android:screenOrientation="portrait" />
 
 		<activity
-			android:name=".ui.chat.view.FullScreenImageActivity"
+			android:name=".ui.chat.view.FullScreenDialogFragment"
 			android:screenOrientation="portrait" />
 
 
